# QPlayer

./: CMakeLists.txt  DrawVideo.cc  DrawVideo.h  FFPlayer.cpp  FFPlayer.h  Ini.cpp  Ini.h  QPlayer.cc  QPlayer.cpp  QPlayer.h  QPlayer.rc  QPlayer.sln  QPlayer.vcxproj  QPlayer.vcxproj.filters  README.md  SoundOut.cpp  SoundOut.h  UICombox.cpp  UICombox.h  UIWnd.h  VideoWnd.cpp  VideoWnd.h  main.cpp  resource.h
.github/workflows/: cmake.yml
Duilib/: CMakeLists.txt  DuiLib.vcxproj  DuiLib.vcxproj.filters  DuiLibMT.vcxproj  UIlib.h
Duilib/Control/: UICombo.cpp  UIProgress.cpp  UISlider.cpp
Duilib/Core/: UIBase.cpp  UIBase.h  UIControl.cpp  UIControl.h  UIManager.cpp  UIManager.h  UIMarkup.cpp  UIRender.cpp
Duilib/Utils/: UIShadow.cpp  Utils.h  WinImplBase.cpp  WinImplBase.h  XUnzip.cpp  ZipApi.h  unzip.cpp  zip.cpp
audio/: AudioPlay.cpp  AudioPlay.h  AudioRec.cpp  AudioRec.h  IVolume.h  VolumeCtrl.cpp  VolumeCtrl.h  VolumeInXXX.cpp  VolumeInXXX.h  VolumeOutWave.cpp  VolumeOutWave.h  WaveBase.cpp  WaveBase.h  WaveIn.cpp  WaveIn.h  WaveOut.cpp  WaveOut.h
dlna/: OnvifDevice.cpp  OnvifDevice.h  UPnP技术总结.docx  UpnpRender.cpp  UpnpRender.h  UpnpServer.cpp  UpnpServer.h  hstring.h  httplib.cc  httplib.h  一文读懂UPNP-UPNP超详细介绍.docx  基于DLNA实现iOS，Android投屏.md
doc/: FFmpeg RTP 100ms以下超低音频流推送设置.md  FFmpeg超低延迟视频推流笔记.md  ffmpeg解码降低延迟记录.md
ffmpeg/: README.txt
ffmpeg/doc/: developer.html  faq.html  fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  (+21 more)
skin/: launcher.xml  player.xml
